fixes #560 - add text overflow in step 1 and editor

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -23,3 +23,10 @@ html, body {
 #workArea .ML__mathlive {
     font-size: 160%;
 }
+
+.staticMath .ML__mathlive,
+.ML__fieldcontainer .ML__mathlive,
+.mathliveModal .ML__mathlive {
+    white-space: normal;
+    width: 100%;
+}
